fixe apache 2.4 unixd_config change.
http://httpd.apache.org/docs/current/developer/new_api_2_4.html

unixd_config
	This has been renamed to ap_unixd_config.
unixd_setup_child()
	This has been renamed to ap_unixd_setup_child(), but most callers should call the added ap_run_drop_privileges() hook.

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,7 +7,11 @@ $(MODULE_NAME).la: $(MODULE_NAME).c
 	$(APXS) -c $(MODULE_NAME).c
 
 install: $(MODULE_NAME).la
-	$(APXS) -i -n $(MODULE_NAME) $(MODULE_NAME).la
+	if [ "$(LIBEXECDIR)" != "" ]; then \
+	$(APXS) -i -S LIBEXECDIR="$(LIBEXECDIR)" -n $(MODULE_NAME) $(MODULE_NAME).la; \
+	else \
+	$(APXS) -i -n $(MODULE_NAME) $(MODULE_NAME).la;  \
+	fi
 
 clean:
 	-rm -f $(MODULE_NAME).o $(MODULE_NAME).lo $(MODULE_NAME).la $(MODULE_NAME).slo 
